--- a/bookers/app/assets/stylesheets/homes.scss
+++ b/bookers/app/assets/stylesheets/homes.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the homes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  margin:33px;
+  line-height:18px;
+}
+strong{
+  font-family:verdana, arial, helvetica, sans-serif ;
+}
+p{
+  margin:33px;
+}
