--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -1,2 +1,50 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<body>
+
+ <p id=notice></p>
+ <h1>Books</h1>
+ <table>
+  <thead>
+   <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+   </tr>
+  </thead>
+  <% @books.each do |book| %>
+   <tbody>
+    <tr>
+     <td>
+      <%= book.title %>
+     </td>
+     <td>
+      <%= book.body %>
+     </td>
+     <td>
+      <%= link_to "Show", book_path(book.id), class: "show_"+book_path(book.id) %>
+     </td>
+     <td>
+      <%= link_to "Edit", edit_book_path(book) %>
+     </td>
+     <td>
+      <%= link_to "Destroy", book_path(book), method: :delete %>
+     </td>
+    </tr>
+   </tbody>
+   <% end %>
+  </table>
+
+ <h2>New book</h2>
+<%= form_with model:@book, url:'/books', local:true, class: "new_book", id: "new_book" do |f| %>
+  <div class="field">
+   <lavel for="book_title">Title</lavel><br>
+   <%= f.text_field :title %>
+  </div>
+  <div class="field">
+   <lavel for="book_body">Body</lavel><br>
+   <%= f.text_area :body %>
+  </div>
+  <div class="actions">
+   <%= f.submit 'Create Book' %>
+  </div>
+ <% end %>
+</body>
