link_to の deleteを修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,7 @@
       <%= book.body %>
      </td>
      <td>
-      <%= link_to "Show", book_path(book.id), class: "show_"+book_path(book.id) %>
+      <%= link_to "Show", book_path(book.id), class: "show_#{book.id}" %>
      </td>
      <td>
       <%= link_to "Edit", edit_book_path(book) %>
