--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
       <%= link_to "Show", book_path(book.id), class: "show_#{book.id}" %>
      </td>
      <td>
-      <%= link_to "Edit", edit_book_path(book) %>
+      <%= link_to "Edit", edit_book_path(book), class: "edit_#{book.id}" %>
      </td>
      <td>
       <%= link_to "Destroy", book_path(book), method: :delete %>
@@ -36,6 +36,9 @@
  <h2>New book</h2>
 <%= form_with model:@book, url:'/books', local:true, class: "new_book", id: "new_book" do |f| %>
   <div class="field">
+   <% if @book.errors.any? %>
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+   <% end %>
    <lavel for="book_title">Title</lavel><br>
    <%= f.text_field :title %>
   </div>
